<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deko.myapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_begin="70dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="70dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="1dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="1dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_begin="140dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="140dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        app:layout_constraintGuide_begin="210dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="210dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        app:layout_constraintGuide_begin="243dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="243dp"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@drawable/layout_bg"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/txtPeso"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="07pt"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"/>

        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@drawable/layout_bg"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/txtAltura"
            android:text="@string/height"
            android:textAlignment="center"
            android:textSize="07pt"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"/>

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@drawable/layout_bg"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <Button
            android:id="@+id/btnClean"
            style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:onClick="limpaForm"
            android:text="@string/clean_btn" />

        <Button
            android:id="@+id/btnCalc"
            style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/calc_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <TextView
            android:id="@+id/tvPhrase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:ems="07"
            android:visibility="invisible"
            android:text="@string/phrase"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:ems="07"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textAlignment="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

    <TextView
        android:id="@+id/tvDiag"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        tools:layout_editor_absoluteX="58dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
